--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,82 +1,88 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_weight="1"
     tools:context=".MainActivity" >
-
-    <TextView
-        android:id="@+id/textEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textPassword"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="59dp"
-        android:text="@string/email_prompt"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textEmail"
-        android:layout_alignBottom="@+id/textEmail"
-        android:layout_toRightOf="@+id/textPassword"
-        android:ems="10"
-        android:inputType="textEmailAddress" >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/editPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonRegister"
-        android:layout_alignLeft="@+id/editEmail"
-        android:layout_marginBottom="40dp"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <Button
-        android:id="@+id/buttonRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/editPassword"
-        android:layout_alignTop="@+id/buttonLogin"
-        android:text="@string/register"
-        android:textAppearance="?android:attr/textAppearanceMedium" 
-        android:onClick="register"/>
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/editPassword"
-        android:text="@string/login" 
-        android:onClick="login"/>
-
+    
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/editEmail"
-        android:src="@drawable/appdojo_mascot_logo" 
-        android:contentDescription="@string/logo"/>
+        android:layout_height="0dip"
+        android:layout_gravity="center"
+        android:layout_weight="70"
+        android:contentDescription="@string/logo"
+        android:src="@drawable/appdojo_mascot_logo" />
+    
+    <LinearLayout 
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+   	    android:layout_height="wrap_content"
+   	    android:layout_weight="10" 
+   	    android:layout_gravity="center" >
+   	    
+        <TextView
+        	android:id="@+id/textEmail"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="@string/email_prompt"
+        	android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/textPassword"
+    	<EditText
+        	android:id="@+id/editEmail"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:ems="10"
+        	android:inputType="textEmailAddress" />
+        
+    </LinearLayout>
+    
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" 
+        android:layout_weight="10"
+        android:layout_gravity="center" >
+        
+        <TextView
+        	android:id="@+id/textPassword"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="@string/password_prompt"
+        	android:textAppearance="?android:attr/textAppearanceMedium" />
+        
+        <EditText
+        	android:id="@+id/editPassword"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:ems="10"
+        	android:inputType="textPassword" />
+        
+    </LinearLayout>
+    
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/editPassword"
-        android:layout_alignBottom="@+id/editPassword"
-        android:layout_alignParentLeft="true"
-        android:text="@string/password_prompt"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_weight="10"
+        android:layout_gravity="center" >
+        
+        <Button
+        	android:id="@+id/buttonLogin"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="@string/login" 
+        	android:textAppearance="?android:attr/textAppearanceMedium"
+        	android:onClick="login"/>
+        
+        <Button
+        	android:id="@+id/buttonRegister"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="@string/register"
+        	android:textAppearance="?android:attr/textAppearanceMedium" 
+        	android:onClick="register"/>
+        
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
